Standardise headings and questions
We have a lot of different size headings and questions, reduce heading
sizes to make better use of the page space.

--- a/app/views/5/verification-report/common-data.html
+++ b/app/views/5/verification-report/common-data.html
@@ -44,14 +44,14 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="common-data" method="post" novalidate>
-          <span class="govuk-caption-xl">
+          <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-xl">
+          <h1 class="govuk-heading-l">
             Required information for any type of report
           </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="domestic-abuse-checks">
+            <h2 class="govuk-heading-m" for="domestic-abuse-checks">
               Domestic abuse checks
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
@@ -60,7 +60,7 @@
             <input class="govuk-input" id="test" name="domestic-abuse-checks" type="domestic-abuse-checks" value="{{data['domestic-abuse-checks']}}">
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="safeguarding-checks">
+            <h2 class="govuk-heading-m" for="safeguarding-checks">
               Safeguarding checks
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
@@ -76,7 +76,7 @@
           </div>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                 <h2 class="govuk-fieldset__heading">
                   Other addresses
                 </h2>
@@ -114,7 +114,7 @@
             </fieldset>
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
+            <h2 class="govuk-heading-m" for="dependant-caring-responsibilities">
               Dependants
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
@@ -129,7 +129,7 @@
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
+            <h2 class="govuk-heading-m" for="dependant-caring-responsibilities">
               Employment
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
