--- a/app/views/5/verification-report/required-sections.html
+++ b/app/views/5/verification-report/required-sections.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Start" %}
+{% set pageName="Tailor your report" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -47,7 +47,7 @@
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                <span class="govuk-caption-xl">
+                <span class="govuk-caption-l">
                   Dylan Adam Armstrong CRN: E234516
                 </span>
                 <h1 class="govuk-fieldset__heading">
