--- a/app/views/5/verification-report/unpaid-work.html
+++ b/app/views/5/verification-report/unpaid-work.html
@@ -44,14 +44,14 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="unpaid-work" method="post" novalidate>
-          <span class="govuk-caption-xl">
+          <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-xl">
+          <h1 class="govuk-heading-l">
             Suitability for unpaid work
           </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="verify-no-health-conditions">
+            <h2 class="govuk-heading-m" for="verify-no-health-conditions">
               Health conditions
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
@@ -66,7 +66,7 @@
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="verify-dwp-involvement">
+            <h2 class="govuk-heading-m" for="verify-dwp-involvement">
               Department for Work and Pensions
             </h2>
             <div id="DWP-hint" class="govuk-hint">
@@ -82,7 +82,7 @@
           </div>
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper">
-              <label class="govuk-label govuk-label--l" for="more-detail">
+              <label class="govuk-label govuk-label--m" for="more-detail">
                 Supporting comments
               </label>
             </h1>
