--- a/app/views/5/verification-report/defendant-details.html
+++ b/app/views/5/verification-report/defendant-details.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Offender details" %}
+{% set pageName="Defendant details" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -44,27 +44,27 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="defendant-details" method="post" novalidate>
-          <span class="govuk-caption-xl">
+          <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-xl">
+          <h1 class="govuk-heading-l">
             Defendant details
           </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="full-name">
+            <h2 class="govuk-heading-m" for="full-name">
               Full name
             </h2>
             <input class="govuk-input" id="full-name" name="full-name" type="full-name" value="{{data['full-name']}}">
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="full-name">
+            <h2 class="govuk-heading-m" for="full-name">
               CRN
             </h2>
             <input class="govuk-input" id="test" name="case-reference-number" type="case-reference-number" value="{{data['case-reference-number']}}">
           </div>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                 <h2 class="govuk-fieldset__heading">
                   Current address
                 </h2>
@@ -105,17 +105,17 @@
             </fieldset>
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="full-name">
+            <h2 class="govuk-heading-m" for="full-name">
              How have you verified that the defendant is living at this address?
             </h2>
             <input class="govuk-input" id="address-verification" name="address-verification" type="address-verification" value="{{data['address-verification']}}">
           </div>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                <h1 class="govuk-fieldset__heading">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h2 class="govuk-fieldset__heading">
                   Date of birth
-                </h1>
+                </h2>
               </legend>
               <div id="date-of-birth-hint" class="govuk-hint">
                 For example, 27 3 2004
