--- a/app/views/5/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/5/verification-report/electronic-monitoring-for-curfew.html
@@ -44,14 +44,14 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="electronic-monitoring-for-curfew" method="post" novalidate>
-          <span class="govuk-caption-xl">
+          <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-xl">
+          <h1 class="govuk-heading-l">
             Suitability for electronic monitoring
           </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="consent-electronic-monitoring-curfew">
+            <h2 class="govuk-heading-m" for="consent-electronic-monitoring-curfew">
               Informed consent to an electronic monitoring curfew
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
@@ -74,8 +74,6 @@
                       No, they have not given informed consent
                     </label>
                   </div>
-
-
                 </div>
               </fieldset>
             </div>
@@ -86,9 +84,8 @@
               <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
             </div>
           </div>
-
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="verify-substance-misuse-mental-health">
+            <h2 class="govuk-heading-m" for="verify-substance-misuse-mental-health">
               Health
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
@@ -102,11 +99,9 @@
             </h3>
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
-
-
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper">
-              <label class="govuk-label govuk-label--l" for="more-detail">
+              <label class="govuk-label govuk-label--m" for="more-detail">
                 Supporting comments
               </label>
             </h1>
@@ -115,7 +110,6 @@
             </div>
             <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
           </div>
-
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
