Pages link in the correct order based on side nav

--- a/app/views/5/verification-report/check-answers.html
+++ b/app/views/5/verification-report/check-answers.html
@@ -125,6 +125,8 @@
                 </a>
               </dd>
             </div>
+          </dl>
+          <dl class="govuk-summary-list govuk-!-margin-bottom-9">
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Offences
@@ -133,7 +135,7 @@
                 {{data['offences']}}
               </dd>
               <dd class="govuk-summary-list__actions">
-                <a class="govuk-link" href="offender-details">
+                <a class="govuk-link" href="offence-information">
                   Change<span class="govuk-visually-hidden"> case reference number</span>
                 </a>
               </dd>
