--- a/app/views/5/verification-report/offence-information.html
+++ b/app/views/5/verification-report/offence-information.html
@@ -43,7 +43,7 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="offender-details" method="post" novalidate>
+        <form action="offence-information" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
