--- a/app/views/5/verification-report/proposal.html
+++ b/app/views/5/verification-report/proposal.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Offender details" %}
+{% set pageName="Proposal" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -43,7 +43,7 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="offender-details" method="post" novalidate>
+        <form action="proposal" method="post" novalidate>
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
