Add horizontal rules to groups question with its how verified
We need to ask a thing and how it was verified. The how verified
questions do not include then thing in its title so we rely on proximity
for context. I think by including horizontal rules between the question
groups they will be easier to use.

For non-sighted users we have a h2 for the thing and a h3 for the how
verified so that they can navigate by h2s to quickly jump between
sections.

--- a/app/views/5/verification-report/common-data.html
+++ b/app/views/5/verification-report/common-data.html
@@ -74,6 +74,7 @@
             </h3>
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -113,6 +114,7 @@
               </div>
             </fieldset>
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="dependant-caring-responsibilities">
               Dependants
@@ -128,6 +130,7 @@
             </h3>
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="dependant-caring-responsibilities">
               Employment
