--- a/app/views/5/verification-report/defendant-details.html
+++ b/app/views/5/verification-report/defendant-details.html
@@ -62,6 +62,7 @@
             </h2>
             <input class="govuk-input" id="test" name="case-reference-number" type="case-reference-number" value="{{data['case-reference-number']}}">
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -110,6 +111,7 @@
             </h2>
             <input class="govuk-input" id="address-verification" name="address-verification" type="address-verification" value="{{data['address-verification']}}">
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
