--- a/app/views/5/verification-report/unpaid-work.html
+++ b/app/views/5/verification-report/unpaid-work.html
@@ -65,6 +65,7 @@
             </h3>
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="verify-dwp-involvement">
               Department for Work and Pensions
@@ -80,6 +81,7 @@
             </h3>
             <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h1 class="govuk-label-wrapper">
               <label class="govuk-label govuk-label--m" for="more-detail">
