Address fields do not save to / use autocomplete

--- a/app/views/5/verification-report/defendant-details.html
+++ b/app/views/5/verification-report/defendant-details.html
@@ -77,31 +77,31 @@
                 <label class="govuk-label" for="address-line-1">
                   Address line 1
                 </label>
-                <input class="govuk-input" id="address-line-1" name="address-line-1" type="text" value="{{data['address-line-1']}}">
+                <input class="govuk-input" id="address-line-1" name="address-line-1" type="text" autocomplete="off" value="{{data['address-line-1']}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-line-2">
                   Address line 2 (optional)
                 </label>
-                <input class="govuk-input" id="address-line-2" name="address-line-2" type="text" value="{{data['address-line-2']}}">
+                <input class="govuk-input" id="address-line-2" name="address-line-2" type="text" autocomplete="off" value="{{data['address-line-2']}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-town">
                   Town or city
                 </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" type="text" value="{{data['address-town']}}">
+                <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" autocomplete="off" type="text" value="{{data['address-town']}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-county">
                   County (optional)
                 </label>
-                <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="address-county" type="text" value="{{data['address-county']}}">
+                <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="address-county" autocomplete="off" type="text" value="{{data['address-county']}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-postcode">
                   Postcode
                 </label>
-                <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text" value="{{data['address-postcode']}}">
+                <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" autocomplete="off" type="text" value="{{data['address-postcode']}}">
               </div>
             </fieldset>
           </div>
