:spanner: Fix regression text inputs use input type = text

--- a/app/views/5/verification-report/common-data.html
+++ b/app/views/5/verification-report/common-data.html
@@ -57,7 +57,7 @@
             <div id="health-conditions-hint" class="govuk-hint">
               You must check for any previous domestic violence charges or domestic abuse Police call-outs.
             </div>
-            <input class="govuk-input" id="test" name="domestic-abuse-checks" type="domestic-abuse-checks" value="{{data['domestic-abuse-checks']}}">
+            <input class="govuk-input" id="test" name="domestic-abuse-checks" type="text" value="{{data['domestic-abuse-checks']}}">
           </div>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="safeguarding-checks">
@@ -66,13 +66,13 @@
             <div id="health-conditions-hint" class="govuk-hint">
               You must check for [something I don't know about yet].
             </div>
-            <input class="govuk-input" id="test" name="safeguarding-checks" type="safeguarding-checks" value="{{data['safeguarding-checks']}}">
+            <input class="govuk-input" id="test" name="safeguarding-checks" type="text" value="{{data['safeguarding-checks']}}">
           </div>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="health-verification">
+            <h3 class="govuk-heading-m" for="checks-verification">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+            <input class="govuk-input" id="check-verification" name="check-verification" type="text" value="{{data['check-verification']}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
@@ -122,13 +122,13 @@
             <div id="health-conditions-hint" class="govuk-hint">
               Record and dependants and caring responsibilities that could impact someone's ability to do unpaid work or receive an electronic monitoring curfew.
             </div>
-            <input class="govuk-input" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" type="dependant-caring-responsibilities" value="{{data['dependant-caring-responsibilities']}}">
+            <input class="govuk-input" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" type="text" value="{{data['dependant-caring-responsibilities']}}">
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="health-verification">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+            <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['health-verification']}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
@@ -138,13 +138,13 @@
             <div id="health-conditions-hint" class="govuk-hint">
               Record their employment status and working pattern.
             </div>
-            <input class="govuk-input" id="verify-current-employment" name="verify-current-employment" type="verify-current-employment" value="{{data['verify-current-employment']}}">
+            <input class="govuk-input" id="verify-current-employment" name="verify-current-employment" type="text" value="{{data['verify-current-employment']}}">
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="health-verification">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+            <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['full-name']}}">
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
