--- a/app/views/5/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/5/verification-report/electronic-monitoring-for-curfew.html
@@ -81,7 +81,7 @@
               <h3 class="govuk-heading-m" for="health-verification">
                How have you verified this information?
               </h3>
-              <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+              <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['full-name']}}">
             </div>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -98,7 +98,7 @@
             <h3 class="govuk-heading-m" for="health-verification">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+            <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['full-name']}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
