--- a/app/views/5/verification-report/unpaid-work.html
+++ b/app/views/5/verification-report/unpaid-work.html
@@ -57,13 +57,13 @@
             <div id="health-conditions-hint" class="govuk-hint">
               Record any health conditions that may effect their ability to complete unpaid work.
             </div>
-            <input class="govuk-input" id="verify-no-health-conditions" name="verify-no-health-conditions" type="verify-no-health-conditions" value="{{data['verify-no-health-conditions']}}">
+            <input class="govuk-input" id="verify-no-health-conditions" name="verify-no-health-conditions" type="text" value="{{data['verify-no-health-conditions']}}">
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="health-verification">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+            <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['full-name']}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
@@ -73,13 +73,13 @@
             <div id="DWP-hint" class="govuk-hint">
               Record any benefits that the defendant gets that may impact on their eligibility or fitness for unpaid work.
             </div>
-            <input class="govuk-input" id="verify-dwp-involvement" name="verify-dwp-involvement" type="verify-dwp-involvement" value="{{data['verify-dwp-involvement']}}">
+            <input class="govuk-input" id="verify-dwp-involvement" name="verify-dwp-involvement" type="text" value="{{data['verify-dwp-involvement']}}">
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="health-verification">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="health-verification" value="{{data['full-name']}}">
+            <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['full-name']}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
