Inputs,names, IDs are explicit and unique
Due to some copy and pasting many inputs were incorrectly formatted,
using duplicate IDs or were described in a less explicit way. This
fixes these problems.

--- a/app/views/5/verification-report/common-data.html
+++ b/app/views/5/verification-report/common-data.html
@@ -54,7 +54,7 @@
             <h2 class="govuk-heading-m" for="domestic-abuse-checks">
               Domestic abuse checks
             </h2>
-            <div id="health-conditions-hint" class="govuk-hint">
+            <div id="domestic-abuse-checks-hint" class="govuk-hint">
               You must check for any previous domestic violence charges or domestic abuse Police call-outs.
             </div>
             <input class="govuk-input" id="test" name="domestic-abuse-checks" type="text" value="{{data['domestic-abuse-checks']}}">
@@ -63,7 +63,7 @@
             <h2 class="govuk-heading-m" for="safeguarding-checks">
               Safeguarding checks
             </h2>
-            <div id="health-conditions-hint" class="govuk-hint">
+            <div id="safeguarding-checks-hint" class="govuk-hint">
               You must check for [something I don't know about yet].
             </div>
             <input class="govuk-input" id="test" name="safeguarding-checks" type="text" value="{{data['safeguarding-checks']}}">
@@ -119,20 +119,20 @@
             <h2 class="govuk-heading-m" for="dependant-caring-responsibilities">
               Dependants
             </h2>
-            <div id="health-conditions-hint" class="govuk-hint">
+            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
               Record and dependants and caring responsibilities that could impact someone's ability to do unpaid work or receive an electronic monitoring curfew.
             </div>
             <input class="govuk-input" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" type="text" value="{{data['dependant-caring-responsibilities']}}">
           </div>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="health-verification">
+            <h3 class="govuk-heading-m" for="how-verified-dependants">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['health-verification']}}">
+            <input class="govuk-input" id="how-verified-dependants" name="how-verified-dependants" type="text" value="{{data['how-verified-dependants']}}">
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="dependant-caring-responsibilities">
+            <h2 class="govuk-heading-m" for="verify-current-employment">
               Employment
             </h2>
             <div id="health-conditions-hint" class="govuk-hint">
@@ -144,7 +144,7 @@
             <h3 class="govuk-heading-m" for="health-verification">
              How have you verified this information?
             </h3>
-            <input class="govuk-input" id="health-verification" name="health-verification" type="text" value="{{data['full-name']}}">
+            <input class="govuk-input" id="how-verified-current-employment" name="how-verified-current-employment" type="text" value="{{data['how-verified-current-employment']}}">
           </div>
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
