health and dwp questions become textareas
We expect users to enter a bunch more information in these boxes so a
textarea feels more appropriate.

--- a/app/views/5/verification-report/unpaid-work.html
+++ b/app/views/5/verification-report/unpaid-work.html
@@ -52,7 +52,7 @@
             <div id="verify-no-health-conditions-hint" class="govuk-hint">Record
               any health conditions that may effect their ability to complete
               unpaid work.</div>
-            <input class="govuk-input" id="verify-no-health-conditions" name="verify-no-health-conditions" type="text" value="{{data['verify-no-health-conditions']}}">
+            <textarea class="govuk-textarea" id="verify-no-health-conditions" name="verify-no-health-conditions" rows="5" aria-describedby="verify-no-health-conditions-hint">{{data['verify-no-health-conditions']}}</textarea>
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="health-verification">How have you
@@ -66,7 +66,7 @@
             <div id="verify-dwp-involvement-hint" class="govuk-hint">
               Record any benefits that the defendant gets that may impact on
               their eligibility or fitness for unpaid work.</div>
-            <input class="govuk-input" id="verify-dwp-involvement" name="verify-dwp-involvement" type="text" value="{{data['verify-dwp-involvement']}}">
+            <textarea class="govuk-textarea" id="verify-dwp-involvement" name="verify-dwp-involvement" rows="5" aria-describedby="verify-dwp-involvement-hint">{{data['verify-dwp-involvement']}}</textarea>
           </div>
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="health-verification">How have you
